clean-up: get(0) replaced with getFirst()